--- a/assets/styles/modal.css
+++ b/assets/styles/modal.css
@@ -1,3 +1,12 @@
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .modal {
     display: none;
     position: fixed;
@@ -7,7 +16,6 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
     -webkit-animation-name: fadeIn;
     -webkit-animation-duration: 0.4s;
@@ -16,14 +24,16 @@
     text-align: center;
 }
 
-.modal-content {    
-    background-color: #dddddd;
+.modal-content {
+    background: var(--background);
     border-radius: 10px;
     margin: 25px;
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    border: var(--border-menu);
+    min-width: 50rem;
 }
 
 .close {
@@ -43,26 +53,28 @@
 
 .modal-header {
     padding: 1px;
-    background: -webkit-gradient(linear, center bottom, center top, from(#d4707a), to(#e45c52));
+    background: var(--bar-color);
     color: white;
     border-radius: 10px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
     text-transform: uppercase;
     margin-bottom: 20px;
+    border-bottom: var(--border-menu);
 }
 
 .modal-body {
     padding: 2px 16px;
-    display: contents;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .inputForm,
 .coment {
     margin: 0.5rem;
-    width: 70%;
+    width: 90%;
     border-radius: 5px;
-    display: inline-block;
     padding: 5px;
 }
 
@@ -75,42 +87,10 @@
 
 .inputForm:focus {
     outline: none !important;
-    border:2px solid #e4a6ac;
-    box-shadow: 0 0 10px #e4a6ac;
+    border: var(--border-menu);
+    box-shadow: 0 0 30px #a091ba;
 }
 
 .modal-footer {
-    color: white;
-    background-color: #dddddd;
-    border-radius: 10px;
-}
-
-#sendButton {
-    background: -webkit-gradient(linear, center bottom, center top, from(#d4707a), to(#e45c52));
-    background-color: lightBlue;
-    display: inline-block;
-    font-size: 21px;
-    margin-top: 20px;
-    padding: 10px 45px;
-    vertical-align: middle;
-    font-family: Arial;
-    margin: 15px;
-    color: #fff;
-    border: 1px solid #84c5f3;
-    text-shadow: 0 0 3px #333333;
-    cursor: pointer;
-    line-height: 1.42857143;
-    -moz-box-shadow: 0 0 8px 1px #888888;
-    -webkit-box-shadow: 0 0 8px 1px #888888;
-    -moz-border-radius: 12px;
-    -webkit-border-radius: 12px;
-    transition-duration: 0.4s;
-}
-
-#sendButton:active {
-    transform: translateY(4px);
-}
-
-#sendButton:hover {
-    opacity: 0.75;
+    background: transparent;
 }
