--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,41 +1,29 @@
+:root {
+    --bar-color: linear-gradient(to right, #231a60 0%, #3c338d 51%, #231a60 100%);
+    --background-color: #f5f5f5;
+    --font-roboto: "Roboto", sans-serif;
+    --link-color: #fff;
+    --hover-color: #3fcaff;
+    --border-menu: 1px solid rgba(255, 255, 255, 0.1);
+    --background: url(../img/background.webp);
+}
+
 html {
-    font-family: sans-serif;
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%
+    font-family: "Roboto";
 }
 
 body {
-    color: #333333;
-    background-color: #DDDDDD;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: var(--font-roboto);
     font-size: 14px;
+    background: var(--background);
     margin: 0;
-}
-
-li {
-    float: left;
+    line-height: 24px;
+    color: #777777;
+    font-weight: 500;
 }
 
 a {
     text-decoration: none;
-}
-
-p {
-    margin-bottom: 10px;
-}
-
-.topBar {
-    background-color: #D4707A;
-    min-height: 50px;
-    margin-bottom: 20px;
-    border: 1px solid transparent;
-}
-
-.container {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
 }
 
 @media (min-width: 768px) {
@@ -50,107 +38,208 @@ p {
     }
 }
 
-.title {
-    list-style-type: none;
-    margin: 0;
-    top: 0;
-    background-color: #D4707A;
+.nav-bar {
+    background: var(--bar-color);
+    display: flex;
+    padding: 0px;
+    border: 0px;
     width: 100%;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-content: center;
+    border-bottom: var(--border-menu);
 }
 
-.firstNavButton {
-    padding: 0px 8px 0px 0px;
-    font-size: 36px;
-    font-family: 'Capriola', sans-serif;
+.nav-bar ul,
+.nav-bar li,
+.nav-bar a {
+    list-style-type: none;
     float: left;
-    font-size: 22px;
-    font-weight: 200;
-    line-height: 1;
+    text-decoration: none;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    box-sizing: border-box;
+}
+
+.logo {
+    margin-right: 30px;
+}
+
+.logo-image {
+    border-style: none;
+}
+
+.menu {
+    display: flex !important;
+    flex-grow: 1;
+    align-items: center;
+    text-transform: uppercase;
+}
+
+.menu-list {
+    width: 100%;
+    flex-direction: row;
+    justify-content: center !important;
+    flex-wrap: wrap;
+    margin-top: 0;
+}
+
+.menu-item {
+    margin-right: 28px;
+}
+
+.menu-link {
+    font: 500 12px/100px var(--font-roboto);
+    color: var(--link-color);
+    padding: 0px;
+    transition: all 0.3s ease-in-out;
+}
+
+.menu-link:hover {
+    color: var(--hover-color);
+}
+
+.main {
+    flex-direction: column;
+}
+
+.turn-container {
+    border: solid 1px black;
+    border-radius: 20px;
+    margin: 2rem 0 0 0 ;
+    background: linear-gradient(to right, #412fb7, #231a60);
+    color: greenyellow;
+}
+
+.table-points {
+    border: solid 1px black;
+    border-radius: 20px;
+    margin: 1rem 0 0 0;
+    background: linear-gradient(to right, #412fb7, #231a60);
+    color: greenyellow;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.table-players {
+    flex: auto;
+    text-align: center;
+}
+
+.table-players tr:first-child th:first-child {
+    border-top-left-radius: 20px;
+}
+
+.table-players tr:first-child th:last-child {
+    border-top-right-radius: 20px;
+}
+
+
+.table-players tr:last-child td:first-child {
+    border-bottom-left-radius: 20px;
+}
+
+.table-players tr:last-child td:last-child {
+    border-bottom-right-radius: 20px;
+}
+
+.table-players td,
+.table-players th {
+    border: var(--border-menu);
+    padding: 8px;
+}
+
+.table-players tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.table-players tr:hover {
+    background-color: rgb(119, 117, 117);
+}
+
+.table-players th {
+    background-color: #412fb7;
     color: white;
 }
 
-.navButtons {
-    float: left;
-    text-transform: uppercase;
-    padding: 21px 15px 12px 12px;
-    color: #fff;
-    font-size:14px;
-}
-
-.subNav {
-    padding: 4px 15px;
-    margin: 0 0 15px 0;
-    list-style: none;
-    background-color: #f5f5f5;
-    height: 20px;
-    border-radius: 4px;
-}
-
-.subNav > li + li:before {
-    padding: 0 5px;
-    color: #ccc;
-    content: "/\00a0"
-}
-
-.subNav > .active {
-    color: #777
-}
-
-#buttonContainer {
+.buttonContainer {
     margin-bottom: 10px;
-    text-align:center;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-#newGameButton {
-    background: -moz-linear-gradient(center top, #57aeea, #3d94d1) repeat scroll 0 0 transparent;
-    background: -webkit-gradient(linear, center bottom, center top, from(#3d94d1), to(#57aeea));
-    background-color: lightBlue;
+.button {
+    background: var(--bar-color);
     display: inline-block;
     font-size: 21px;
     margin-top: 20px;
     padding: 10px 45px;
     vertical-align: middle;
-    font-family: Arial;
-    color: #fff;
-    border: 1px solid #84C5F3;
+    margin: 15px;
+    color: var(--link-color);
+    border: var(--border-menu);
     text-shadow: 0 0 3px #333333;
     cursor: pointer;
-    line-height: 1.42857143;
-    -moz-box-shadow: 0 0 8px 1px #888888;
-    -webkit-box-shadow: 0 0 8px 1px #888888;
-    -moz-border-radius: 12px;
-    -webkit-border-radius: 12px;
+    line-height: 1.5;
+    box-shadow: 0 0 8px 1px #888888;
+    border-radius: 12px;
     transition-duration: 0.4s;
 }
 
-#newGameButton:active {
+.button:active {
     transform: translateY(4px);
 }
 
-#newGameButton:hover {
+.button:hover {
     opacity: 0.75;
 }
 
-#description {
-    margin: 35px 0 10px 0;
-    padding: 10px;
-    border-radius: 4px;
-    background: #efefef;
+.description {
+    padding: 20px;
+    border-radius: 30px;
+    background: var(--bar-color);
+    color: var(--link-color);
+}
+
+.description p {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.description a,
+.footer a {
+    color: var(--link-color);
+}
+
+.description a:hover,
+.footer a:hover {
+    color: var(--hover-color);
 }
 
 .footer {
-    padding: 19px 14px;
-    margin-top: 40px;
-    border-top: 1px solid #CAC3C3;
-    background-color: white;
-    height: 39px;
+    margin-top: 0.5rem;
+    padding: 30px 0;
+    border-top: var(--border-menu);
+    background: var(--bar-color);
 }
 
 .footer p {
-    margin-bottom: 0;
-    color: #777;
+    margin: 0;
+    color: var(--link-color);
     font-size: 12px;
-    padding-left: 60px;
+    padding-left: 1rem;
 }
 
 #turnText {
