--- a/assets/styles/modal.css
+++ b/assets/styles/modal.css
@@ -68,6 +68,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-height: 30rem;
+    overflow-y: auto;
+    margin-bottom: 1rem;
 }
 
 .inputForm,
